--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VUe Calculator</title>
+    <script src="https://unpkg.com/vue@next"></script>
+    <script src="./app.js" defer></script>
+
 </head>
+
 <body>
     
+    <div id="app">
+        <h1> {{ sum }} </h1>
+        <button v-for="operator of operators" @click="addToSum(operator)">
+            {{ operator }}
+        </button>
+        <button @click="evalSum">=</button>
+    </div>
+
 </body>
+
 </html>
